# plussim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.md
iris/: CMakeLists.txt
iris/src/: cube.cpp  cube.h  double_pendulum.cpp  double_pendulum.h  main.cpp
src/: double_pendulum.cpp  main.cpp  system_state.h
stellaris/: CMakeLists.txt
stellaris/include/stellaris/models/: planetes.h
stellaris/src/: main.cpp  stellaris.h
stellaris/tests/: CMakeLists.txt  test.cpp
tests/: test.cpp
visual/: CMakeLists.txt
visual/src/: main.cpp
